GNOME Bugzilla – Bug 642058
lookingGlass: fix red border drawing in the inspector, port to JS
Last modified: 2011-02-10 21:05:24 UTC
Some recent painting-efficiency fix broke the inspector, which accidentally depended on things getting repainted too often, and so was failing to highlight things properly now. A simple queue_redraw() fixes this, but while I was there, I decided to port the drawing hook to JS as well, since all the necessary parts of cogl work fine from JS.
Created attachment 180613 [details] [review] lookingGlass: fix red border drawing in the inspector, port to JS
Review of attachment 180613 [details] [review]: Looks OK to me.
Attachment 180613 [details] pushed as 475c360 - lookingGlass: fix red border drawing in the inspector, port to JS